--- a/ci/tasks/build.yml
+++ b/ci/tasks/build.yml
@@ -18,5 +18,5 @@ run:
   - -exc
   - |
     ls source-code
-    cp source-code/manifest.yml source-code-built/manifest.yml
+    cp source-code/* source-code-built/
     ls source-code-built
