--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -20,12 +20,11 @@ jobs:
     serial: true
     plan:
     - {get: source-code, trigger: true}
-#    - task: build
-#      privileged: true
-#      file: source-code/ci/tasks/build.yml
-#      path: source-code
-#    - put: resource-deploy-web-app
-#      params:
-#        manifest: source-code-built/manifest.yml
     - task: build
+      privileged: true
       file: source-code/ci/tasks/build.yml
+      path: source-code
+    - put: resource-deploy-web-app
+      params:
+
+        manifest: source-code-built/manifest.yml
