--- a/ci/tasks/build.yml
+++ b/ci/tasks/build.yml
@@ -20,4 +20,4 @@ run:
     ls source-code
     cp -r source-code/* source-code-built/
     ls source-code-built
-    npm start 
+    ls /usr/local/bin 
