--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -23,8 +23,6 @@ jobs:
     - task: build
       privileged: true
       file: source-code/ci/tasks/build.yml
-      path: source-code
     - put: resource-deploy-web-app
       params:
-
-        manifest: source-code-built/manifest.yml
+        manifest: source-code/manifest.yml
