--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -20,9 +20,10 @@ jobs:
     serial: true
     plan:
     - {get: source-code, trigger: true}
-    - task: build
-      privileged: true
-      file: source-code/ci/tasks/build.yml
+#    - task: build
+#      privileged: true
+#      file: source-code/ci/tasks/build.yml
     - put: resource-deploy-web-app
       params:
         manifest: source-code/manifest.yml
+        path: source-code
