--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -15,12 +15,26 @@ resources:
       space: {{cf-local-space}}
       skip_cert_check: true
 
+- name: resource-deploy-web-app-pws
+    type: cf
+    source:
+      api: {{cf-pws-api}}
+      username: {{cf-pws-username}}
+      password: {{cf-pws-password}}
+      organization: {{cf-pws-organization}}
+      space: {{cf-pws-space}}
+      skip_cert_check: true
+
 jobs:
   - name: job-deploy-app
     serial: true
     plan:
     - {get: source-code, trigger: true}
     - put: resource-deploy-web-app
+      params:
+        manifest: source-code/manifest.yml
+        path: source-code
+    - put: resource-deploy-web-app-pws
       params:
         manifest: source-code/manifest.yml
         path: source-code
